--- a/index.html
+++ b/index.html
@@ -391,7 +391,7 @@
                         </div>
                         <div class="contact-item-text">
                             <h4>Email</h4>
-                            <p>developer@example.com</p>
+                            <p>developer@786.com</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -400,7 +400,7 @@
                         </div>
                         <div class="contact-item-text">
                             <h4>Phone</h4>
-                            <p>+1 (555) 123-4567</p>
+                            <p>+x (xxx) xxx-xxx</p>
                         </div>
                     </div>
                     <div class="contact-item">
@@ -460,4 +460,4 @@
     <!-- JavaScript -->
     <script src="script.js"></script>
 </body>
-</html>
+</html>z
